enhancements with ci
